workspace = { members = ["dottorrent"] }
[package]
name = "wasm-torrentfile-tools"
version = "0.1.0"
authors = ["Ariyan Eghbal <ryn.eghbal@gmail.com>"]
edition = "2021"

[lib]
name = "libwasm_torrentfile_tools"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]


[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
# js-sys = "0.3.56"
web-sys = { version = "*", features = [
    "FileReader",
    "Window",
    "HtmlDocument",
    "HtmlElement",
    "Element",
    "console",
] }
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_json = "*"
human_bytes = "0.4.3"
chrono = "0.4.31"
dottorrent = { path = "dottorrent", version = "*" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
